# gaussian-process-for-time-to-event-analysis

./: .gitignore  README.md  pyproject.toml  references.md
data/: cancer.pickle  covid.pickle  heart.pickle  hk_covid.csv  result.csv  rossi.pickle  synthetic.pickle  transplant.pickle
data/youtube/: youtube_views_report_lifetime.xls
tte/: dataloader.py  experiment.py  main.py  model.py  test.py  utils.py
tte/models/: numpyro_model.py  pymc_model.py
