[tool.poetry]
name = "tte"
version = "0.1.0"
description = ""
authors = ["benlau6 <benyplau@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pandas = "^1.4.1"
rich = "^11.2.0"
pymc = "4.0.0b6"
scipy = ">=1.7,<1.8"
lifelines = "^0.26.4"
numpy = ">=1.21,<1.22"
matplotlib = "^3.5.1"
statsmodels = "^0.13.2"
arviz = "0.12.0"
jax = "^0.3.4"
graphviz = "^0.19.1"
numpyro = {version = "^0.9.1", extras = ["cpu"]}
tinygp = "0.2.2"
jupyterlab = {version = "^3.3.2", extras = ["dev"]}
scikit-learn = "^1.0.2"
scikit-survival = "^0.17.2"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
black = {version = "^22.1.0", allow-prereleases = true}
jupyterlab = "^3.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
